aes linear layer representation

--- a/2024/11/2024-11-11.tex
+++ b/2024/11/2024-11-11.tex
@@ -58,6 +58,118 @@ x_{i} &= x_{i} \oplus (x_{j} \lll r), \quad i \neq j : ((x_1, \dots, x_{i}, \dot
 x_i &= a \oplus b, \quad x_j = (a \ggg r) \oplus c : ((x_1, \dots, x_{i}, \dots, x_{j}, \dots, x_v), v) \rightarrow ((x_1, \dots, b, \dots, c, \dots, x_v, a), v+1)
 \end{align*}
 
+\subsection{AES线性层的优化}
+
+AES线性层$L=MP$, $M$为$128 \times 128$的矩阵，$P$为$128 \times 128$的单位置换矩阵。其中$M$表示为 
+\begin{eqnarray*}
+  M &=& \left(
+  \begin{array}{cccc}
+    M_0 & 0 & 0 & 0 \\
+    0 & M_0 & 0 & 0 \\
+    0 & 0 & M_0 & 0 \\
+    0 & 0 & 0 & M_0
+  \end{array}
+  \right), \quad \text{where} \quad
+  M_0 = \left(
+  \begin{array}{cccc}
+    M_{00} & M_{01} & M_{02} & M_{03} \\
+    M_{03} & M_{00} & M_{01} & M_{02} \\
+    M_{02} & M_{03} & M_{00} & M_{01} \\
+    M_{01} & M_{02} & M_{03} & M_{00}
+  \end{array}
+  \right)
+  \end{eqnarray*}
+
+\begin{eqnarray*}
+  M_{00} = \left(\begin{array}{rrrrrrrr}
+    0 & 1 & 0 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 1 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 0 & 1 & 0 & 0 & 0 & 0 \\
+    1 & 0 & 0 & 0 & 1 & 0 & 0 & 0 \\
+    1 & 0 & 0 & 0 & 0 & 1 & 0 & 0 \\
+    0 & 0 & 0 & 0 & 0 & 0 & 1 & 0 \\
+    1 & 0 & 0 & 0 & 0 & 0 & 0 & 1 \\
+    1 & 0 & 0 & 0 & 0 & 0 & 0 & 0
+    \end{array}\right)\quad
+  M_{01} = \left(\begin{array}{rrrrrrrr}
+    1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 1 & 1 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 1 & 1 & 0 & 0 & 0 & 0 \\
+    1 & 0 & 0 & 1 & 1 & 0 & 0 & 0 \\
+    1 & 0 & 0 & 0 & 1 & 1 & 0 & 0 \\
+    0 & 0 & 0 & 0 & 0 & 1 & 1 & 0 \\
+    1 & 0 & 0 & 0 & 0 & 0 & 1 & 1 \\
+    1 & 0 & 0 & 0 & 0 & 0 & 0 & 1
+    \end{array}\right)
+\end{eqnarray*}
+
+\begin{eqnarray*}
+  M_{02} = \left(\begin{array}{rrrrrrrr}
+    1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 1 & 0 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 1 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 0 & 1 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 \\
+    0 & 0 & 0 & 0 & 0 & 1 & 0 & 0 \\
+    0 & 0 & 0 & 0 & 0 & 0 & 1 & 0 \\
+    0 & 0 & 0 & 0 & 0 & 0 & 0 & 1
+    \end{array}\right)\quad
+  M_{03} = \left(\begin{array}{rrrrrrrr}
+    1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 1 & 0 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 1 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 0 & 1 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 \\
+    0 & 0 & 0 & 0 & 0 & 1 & 0 & 0 \\
+    0 & 0 & 0 & 0 & 0 & 0 & 1 & 0 \\
+    0 & 0 & 0 & 0 & 0 & 0 & 0 & 1
+    \end{array}\right)
+\end{eqnarray*}
+
+其中$P$表示为,其中$E$为$8\times8$单位矩阵：
+
+\begin{eqnarray*}
+  P = \left(\begin{array}{rrrrrrrrrrrrrrrr}
+    E & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 0 & 0 & 0 & E & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & E & 0 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & E \\
+     0 & 0 & 0 & 0 & E & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & E & 0 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & E & 0 \\
+    0 & 0 & 0 & E & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+     0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & E & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & E & 0 & 0 \\
+    0 & 0 & E & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 0 & 0 & 0 & 0 & 0 & E & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+     0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & E & 0 & 0 & 0 \\
+    0 & E & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 0 & 0 & 0 & 0 & E & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+    0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & E & 0 & 0 & 0 & 0
+    \end{array}\right)
+\end{eqnarray*}
+
+\begin{eqnarray*}
+  L = \left(\begin{array}{rrrrrrrrrrrrrrrr}
+    M_{00} & 0 & 0 & 0 & 0 & M_{01} & 0 & 0 & 0 & 0 & M_{02} & 0 & 0 & 0 & 0 & M_{03} \\
+    M_{03} & 0 & 0 & 0 & 0 & M_{00} & 0 & 0 & 0 & 0 & M_{01} & 0 & 0 & 0 & 0 & M_{02} \\
+    M_{02} & 0 & 0 & 0 & 0 & M_{03} & 0 & 0 & 0 & 0 & M_{00} & 0 & 0 & 0 & 0 & M_{01} \\
+    M_{01} & 0 & 0 & 0 & 0 & M_{02} & 0 & 0 & 0 & 0 & M_{03} & 0 & 0 & 0 & 0 & M_{00} \\
+    0 & 0 & 0 & M_{03} & M_{00} & 0 & 0 & 0 & 0 & M_{01} & 0 & 0 & 0 & 0 & M_{02} & 0 \\
+    0 & 0 & 0 & M_{02} & M_{03} & 0 & 0 & 0 & 0 & M_{00} & 0 & 0 & 0 & 0 & M_{01} & 0 \\
+    0 & 0 & 0 & M_{01} & M_{02} & 0 & 0 & 0 & 0 & M_{03} & 0 & 0 & 0 & 0 & M_{00} & 0 \\
+    0 & 0 & 0 & M_{00} & M_{01} & 0 & 0 & 0 & 0 & M_{02} & 0 & 0 & 0 & 0 & M_{03} & 0 \\
+    0 & 0 & M_{02} & 0 & 0 & 0 & 0 & M_{03} & M_{00} & 0 & 0 & 0 & 0 & M_{01} & 0 & 0 \\
+    0 & 0 & M_{01} & 0 & 0 & 0 & 0 & M_{02} & M_{03} & 0 & 0 & 0 & 0 & M_{00} & 0 & 0 \\
+    0 & 0 & M_{00} & 0 & 0 & 0 & 0 & M_{01} & M_{02} & 0 & 0 & 0 & 0 & M_{03} & 0 & 0 \\
+    0 & 0 & M_{03} & 0 & 0 & 0 & 0 & M_{00} & M_{01} & 0 & 0 & 0 & 0 & M_{02} & 0 & 0 \\
+    0 & M_{01} & 0 & 0 & 0 & 0 & M_{02} & 0 & 0 & 0 & 0 & M_{03} & M_{00} & 0 & 0 & 0 \\
+    0 & M_{00} & 0 & 0 & 0 & 0 & M_{01} & 0 & 0 & 0 & 0 & M_{02} & M_{03} & 0 & 0 & 0 \\
+    0 & M_{03} & 0 & 0 & 0 & 0 & M_{00} & 0 & 0 & 0 & 0 & M_{01} & M_{02} & 0 & 0 & 0 \\
+    0 & M_{02} & 0 & 0 & 0 & 0 & M_{03} & 0 & 0 & 0 & 0 & M_{00} & M_{01} & 0 & 0 & 0
+    \end{array}\right)
+\end{eqnarray*}
+
 % Include the bibliography
 \bibliographystyle{alpha}
 \bibliography{../../paper}
