--- a/paper.bib
+++ b/paper.bib
@@ -11,4 +11,17 @@
   doi       = {10.46586/TOSC.V2024.I1.441-458},
 }
 
+@Article{Adomnicai2021,
+  author    = {Alexandre Adomnicai and Thomas Peyrin},
+  journal   = {{IACR} Trans. Cryptogr. Hardw. Embed. Syst.},
+  title     = {Fixslicing AES-like Ciphers New bitsliced {AES} speed records on ARM-Cortex {M} and {RISC-V}},
+  year      = {2021},
+  number    = {1},
+  pages     = {402--425},
+  volume    = {2021},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/journals/tches/AdomnicaiP21.bib},
+  doi       = {10.46586/TCHES.V2021.I1.402-425},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
