--- a/2024/11/2024-11-11.tex
+++ b/2024/11/2024-11-11.tex
@@ -33,12 +33,9 @@
 
 
 % Custom Abstract
-\noindent \textbf{Abstract}: 本周主要工作为线性层部分重写。
+\noindent \textbf{Abstract}: 本周完成了线性层的重构。为深入理解线性层的优化方法，我们对\cite{Leurent2024}进行了系统性分析。实验结果表明，循环矩阵在AES中的应用效果未达预期。基于此发现，我们将研究重点转向线性层中置换操作的优化，主要包括以下三个方面：结构优化、算法改进和OPO算法优化。
 
-
-\section{线性层重构与优化分析}
-
-为深入理解线性层的优化方法，本研究对\cite{Leurent2024}进行了系统性分析。由于原文对线性层的描述相对简略，我们通过源代码分析补充了关键实现细节。
+\noindent \textbf{下周计划}: 1）完善AES算法实现的实验工作。
 
 \subsection{线性层优化算法分析}
 
@@ -100,6 +97,15 @@ M_i = \begin{pmatrix}
 
 然而，实验结果表明，当转换回标准形式时，仍需4次XOR操作。这一现象揭示了\cite{Leurent2024}优化方法的局限性：仅在XOR操作次数超过4次时才能体现实质性优势
 
+\subsection{论文撰写}
+
+本周研究表明，循环矩阵在AES应用中的效果未达预期。基于这一发现，我们将研究重心转向线性层中置换操作的优化，主要包含以下三个方面：
+
+\textbf{结构优化:}为提高论文的逻辑性和可读性，我们重新组织了内容结构：首先引入置换操作的基本概念和理论基础，其次详细阐述置换操作的优化方法，最后展示在实际应用中的优化效果。
+
+\textbf{算法改进:} 在split和merge操作的设计中，我们基于两个核心思想进行优化：切片并行,通过数据分割提高计算效率，引出merge;动态规划,采用自底向上的优化策略，引出split。
+
+\textbf{OPO算法优化:} 我们对原有的OPO（Optimal Permutation Operation）算法进行了改进：引入贪心递归策略，保证算法收敛性，优化分解与合并过程，确保获得全局最优解。
 
 % Include the bibliography
 \bibliographystyle{alpha}
