--- a/2024/11/2024-11-18-slide.tex
+++ b/2024/11/2024-11-18-slide.tex
@@ -138,7 +138,7 @@
     \end{block}
 
     \begin{block}{全文类似的不突出不明确不清晰的很多，是不是水平就是这样，提高不了了？}
-        对表述不明确的地方进行修改。
+        对表述不明确的地方进行修改，还有小部分的提升空间。
     \end{block}
     \begin{alertblock}{本周计划}
         完成论文初稿，对论文精修。
