--- a/2024/12/2024-12-02.tex
+++ b/2024/12/2024-12-02.tex
@@ -50,6 +50,7 @@
 \begin{itemize}
   \item 对于论文中开源的链接部分，我们将所有的仓库跟换到私密，只有在论文发表后才会开源。这样可以保证我们的研究成果不会被他人提前获取。
   \item 更改图片、表格、公式大小，使其符合双栏论文的要求。文字中对表格和图片的引用也需要更改。
+  \item 补充论文单位、个人邮箱、项目资助等信息。
 \end{itemize}
 
 
