--- a/paper.bib
+++ b/paper.bib
@@ -39,5 +39,16 @@
   doi       = {10.1007/978-3-319-69453-5\_{1}{0}},
   url       = {https://doi.org/10.1007/978-3-319-69453-5\_10},
 }
-
+@Article{Liu2020,
+  author    = {Zhe Liu and Reza Azarderakhsh and Howon Kim and Hwajeong Seo},
+  journal   = {{IEEE} Trans. Computers},
+  title     = {Efficient Software Implementation of Ring-LWE Encryption on IoT Processors},
+  year      = {2020},
+  number    = {10},
+  pages     = {1424--1433},
+  volume    = {69},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/journals/tc/LiuAKS20.bib},
+  doi       = {10.1109/TC.2017.2750146},
+}
 @Comment{jabref-meta: databaseType:bibtex;}
