add new weekly report for 2024-12-30 and update bibliography entries

--- a/paper.bib
+++ b/paper.bib
@@ -1,4 +1,4 @@
-@Article{Leurent2024,
+@article{Leurent2024,
   author    = {Ga{\"{e}}tan Leurent and Clara Pernot},
   journal   = {{IACR} Trans. Symmetric Cryptol.},
   title     = {Design of a Linear Layer Optimised for Bitsliced 32-bit Implementation},
@@ -8,10 +8,10 @@
   volume    = {2024},
   bibsource = {dblp computer science bibliography, https://dblp.org},
   biburl    = {https://dblp.org/rec/journals/tosc/LeurentP24.bib},
-  doi       = {10.46586/TOSC.V2024.I1.441-458},
+  doi       = {10.46586/TOSC.V2024.I1.441-458}
 }
 
-@Article{Adomnicai2021,
+@article{Adomnicai2021,
   author    = {Alexandre Adomnicai and Thomas Peyrin},
   journal   = {{IACR} Trans. Cryptogr. Hardw. Embed. Syst.},
   title     = {Fixslicing AES-like Ciphers New bitsliced {AES} speed records on ARM-Cortex {M} and {RISC-V}},
@@ -21,10 +21,10 @@
   volume    = {2021},
   bibsource = {dblp computer science bibliography, https://dblp.org},
   biburl    = {https://dblp.org/rec/journals/tches/AdomnicaiP21.bib},
-  doi       = {10.46586/TCHES.V2021.I1.402-425},
+  doi       = {10.46586/TCHES.V2021.I1.402-425}
 }
 
-@InProceedings{Schwabe2016,
+@inproceedings{Schwabe2016,
   author    = {Peter Schwabe and Ko Stoffelen},
   booktitle = {Selected Areas in Cryptography - {SAC} 2016 - 23rd International Conference, St. John's, NL, Canada, August 10-12, 2016, Revised Selected Papers},
   title     = {All the {AES} You Need on Cortex-M3 and {M4}},
@@ -37,9 +37,9 @@
   bibsource = {dblp computer science bibliography, https://dblp.org},
   biburl    = {https://dblp.org/rec/conf/sacrypt/SchwabeS16.bib},
   doi       = {10.1007/978-3-319-69453-5\_{1}{0}},
-  url       = {https://doi.org/10.1007/978-3-319-69453-5\_10},
+  url       = {https://doi.org/10.1007/978-3-319-69453-5\_10}
 }
-@Article{Liu2020,
+@article{Liu2020,
   author    = {Zhe Liu and Reza Azarderakhsh and Howon Kim and Hwajeong Seo},
   journal   = {{IEEE} Trans. Computers},
   title     = {Efficient Software Implementation of Ring-LWE Encryption on IoT Processors},
@@ -49,6 +49,87 @@
   volume    = {69},
   bibsource = {dblp computer science bibliography, https://dblp.org},
   biburl    = {https://dblp.org/rec/journals/tc/LiuAKS20.bib},
-  doi       = {10.1109/TC.2017.2750146},
+  doi       = {10.1109/TC.2017.2750146}
 }
+
+@article{Lee2022,
+  author    = {Wai-Kong Lee and Hwa Jeong Seo and Seog Chung Seo and Seong Oun Hwang},
+  journal   = {IEEE Transactions on Circuits and Systems II: Express Briefs},
+  title     = {Efficient Implementation of AES-CTR and AES-ECB on GPUs With Applications for High-Speed FrodoKEM and Exhaustive Key Search},
+  year      = {2022},
+  issn      = {1558-3791},
+  pages     = {2962--2966},
+  volume    = {69},
+  date      = {June 2022},
+  doi       = {10.1109/TCSII.2022.3164089},
+  issue     = {6},
+  keywords  = {Encryption, Graphics processing units, Throughput, Codes, Circuits and systems, Ciphers, NIST, Graphics processing unit, AES, counter mode, block cipher, key encapsulation mechanism},
+  publisher = {IEEE}
+}
+
+@book{Daemen2020,
+  author    = {Joan Daemen and Vincent Rijmen},
+  publisher = {Springer},
+  title     = {The Design of Rijndael - The Advanced Encryption Standard (AES), Second Edition},
+  year      = {2020},
+  isbn      = {978-3-662-60768-8},
+  series    = {Information Security and Cryptography},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/series/isc/DaemenR20.bib},
+  doi       = {10.1007/978-3-662-60769-5}
+}
+
+@inproceedings{Jancar2024,
+  author    = {Jan Jancar and Marcel Fourn{\'{e}} and Daniel De Almeida Braga and Mohamed Sabt and Peter Schwabe and Gilles Barthe and Pierre{-}Alain Fouque and Yasemin Acar},
+  booktitle = {Software Engineering 2024, Fachtagung des GI-Fachbereichs Softwaretechnik, Linz, Austria, February 26 - March 1, 2024},
+  title     = {They're not that hard to mitigate: What Cryptographic Library Developers Think About Timing Attacks},
+  year      = {2024},
+  editor    = {Rick Rabiser and Manuel Wimmer and Iris Groher and Andreas Wortmann and Bianca Wiesmayr},
+  pages     = {143--144},
+  publisher = {Gesellschaft f{\"{u}}r Informatik e.V.},
+  series    = {{LNI}},
+  volume    = {{P-343}},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/se/JancarFBSSBFA24.bib},
+  doi       = {10.18420/SW2024_47}
+}
+
+@article{Marshall2021,
+  author    = {Ben Marshall and G. Richard Newell and Dan Page and Markku{-}Juhani O. Saarinen and Claire Wolf},
+  journal   = {{IACR} Trans. Cryptogr. Hardw. Embed. Syst.},
+  title     = {The design of scalar {AES} Instruction Set Extensions for {RISC-V}},
+  year      = {2021},
+  number    = {1},
+  pages     = {109--136},
+  volume    = {2021},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/journals/tches/MarshallNPSW21.bib},
+  doi       = {10.46586/TCHES.V2021.I1.109-136}
+}
+
+@article{Li2020,
+  author    = {Liandeng Li and Jiarui Fang and Jinlei Jiang and Lin Gan and Weijie Zheng and Haohuan Fu and Guangwen Yang},
+  journal   = {J. Parallel Distributed Comput.},
+  title     = {Efficient {AES} implementation on Sunway TaihuLight supercomputer: {A} systematic approach},
+  year      = {2020},
+  pages     = {178--189},
+  volume    = {138},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/journals/jpdc/LiFJGZFY20.bib},
+  doi       = {10.1016/J.JPDC.2019.12.013}
+}
+
+@article{Hajihassani2019,
+  author    = {Omid Hajihassani and Saleh Khalaj Monfared and Seyed Hossein Khasteh and Saeid Gorgin},
+  journal   = {{IEEE} Trans. Parallel Distributed Syst.},
+  title     = {Fast {AES} Implementation: {A} High-Throughput Bitsliced Approach},
+  year      = {2019},
+  number    = {10},
+  pages     = {2211--2222},
+  volume    = {30},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/journals/tpds/HajihassaniMKG19.bib},
+  doi       = {10.1109/TPDS.2019.2911278}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
