add weekly report for 2025-01-06 and update bibliography entries

--- a/paper.bib
+++ b/paper.bib
@@ -132,4 +132,81 @@
   doi       = {10.1109/TPDS.2019.2911278}
 }
 
+@inproceedings{Bernstein2019,
+  author    = {Daniel J. Bernstein and Andreas H{\"{u}}lsing and Stefan K{\"{o}}lbl and Ruben Niederhagen and Joost Rijneveld and Peter Schwabe},
+  booktitle = {Proceedings of the 2019 {ACM} {SIGSAC} Conference on Computer and Communications Security, {CCS} 2019, London, UK, November 11-15, 2019},
+  title     = {The SPHINCS\({}^{\mbox{+}}\) Signature Framework},
+  year      = {2019},
+  editor    = {Lorenzo Cavallaro and Johannes Kinder and XiaoFeng Wang and Jonathan Katz},
+  pages     = {2129--2146},
+  publisher = {{ACM}},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/ccs/BernsteinHKNRS19.bib},
+  doi       = {10.1145/3319535.3363229}
+}
+
+@article{Wang2025,
+  author    = {Ziheng Wang and Xiaoshe Dong and Heng Chen and Yan Kang and Qiang Wang},
+  journal   = {IEEE Transactions on Computers},
+  title     = {CUSPX: Efficient GPU Implementations of Post-Quantum Signature SPHINCS<sup>+</sup>},
+  year      = {2025},
+  issn      = {0018-9340},
+  number    = {1},
+  pages     = {15-28},
+  volume    = {74},
+  doi       = {10.1109/tc.2024.3457736},
+  publisher = {Institute of Electrical and Electronics Engineers (IEEE)}
+}
+
+@misc{Turan,
+  author    = {Meltem Sonmez Turan and Kerry McKay and Donghoon Chang and Lawrence E. Bassham and Jinkeon Kang and Noah D. Waller and John M. Kelsey and Deukjo Hong},
+  title     = {Status report on the final round of the NIST lightweight cryptography standardization process},
+  doi       = {10.6028/nist.ir.8454},
+  publisher = {National Institute of Standards and Technology (U.S.)}
+}
+
+@article{Shor1994,
+  author  = {Shor, Peter W.},
+  title   = {Algorithms for Quantum Computation: Discrete Logarithms and Factoring},
+  journal = {Proceedings 35th Annual Symposium on Foundations of Computer Science},
+  year    = {1994},
+  pages   = {124--134},
+  doi     = {10.1109/SFCS.1994.365700}
+}
+
+@techreport{NIST2016,
+  author      = {{National Institute of Standards and Technology}},
+  title       = {Report on Post-Quantum Cryptography},
+  institution = {National Institute of Standards and Technology},
+  year        = {2016},
+  number      = {NISTIR 8105},
+  url         = {https://nvlpubs.nist.gov/nistpubs/ir/2016/NIST.IR.8105.pdf}
+}
+
+@article{Lee2022,
+  author    = {Wai{-}Kong Lee and Seong Oun Hwang},
+  journal   = {{IEEE} Trans. Serv. Comput.},
+  title     = {High Throughput Implementation of Post-Quantum Key Encapsulation and Decapsulation on {GPU} for Internet of Things Applications},
+  year      = {2022},
+  number    = {6},
+  pages     = {3275--3288},
+  volume    = {15},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/journals/tsc/LeeH22.bib},
+  doi       = {10.1109/TSC.2021.3103956}
+}
+
+@article{Joseph2022,
+  author    = {David Joseph and Rafael Misoczki and Marc Manzano and Joe Tricot and Fernando Dominguez Pinuaga and Olivier Lacombe and Stefan Leichenauer and Jack Hidary and Phil Venables and Royal Hansen},
+  journal   = {Nat.},
+  title     = {Transitioning organizations to post-quantum cryptography},
+  year      = {2022},
+  number    = {7909},
+  pages     = {237--243},
+  volume    = {605},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/journals/nature/JosephMMTPLLHVH22.bib},
+  doi       = {10.1038/S41586-022-04623-2}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
