update slide title formatting and add tasks section to readme

--- a/2025/01/2025-01-06-slide.tex
+++ b/2025/01/2025-01-06-slide.tex
@@ -23,7 +23,7 @@
 \setbeamercolor{alertblock title}{bg=red!50,fg=black}
 \setbeamercolor{alertblock body}{bg=red!20,fg=black}
 
-\title{周报}
+\title{\textbf{周报}}
 \author{向嘉豪}
 \institute{衡阳师范学院}
 \date{\today}
