fix: correct wording in HT树 subsection for clarity

--- a/2025/01/2025-01-13.tex
+++ b/2025/01/2025-01-13.tex
@@ -93,7 +93,7 @@ child {node[fill=blue!20] {$M_k$}}
 \end{figure}
 
 \subsection{HT树}
-HT（Hypertree）结构采用分层聚合的方式（图\ref{fig:ht_tree}）：每层XMSS树的根节点作为下一层的叶子节点，最终在顶部生成全球的$PK$. 在验证环节，SPX结合各层子树的WOTS+签名与中间哈希节点来完成验证流程。
+HT（Hypertree）结构采用分层聚合的方式（图\ref{fig:ht_tree}）：每层XMSS树的根节点作为下一层的叶子节点，最终在顶部生成全局的$PK$. 在验证环节，SPX结合各层子树的WOTS+签名与中间哈希节点来完成验证流程。
 
 \begin{figure}[htbp]
 \centering
