--- a/2025/01/report.tex
+++ b/2025/01/report.tex
@@ -1,9 +1,8 @@
 \documentclass[report]{../../custom}
-
-\title{Sample Report}
 \begin{document}
 \maketitle
 
+\section{including}
 sss
 % Rest of your document content...
 
