feat(report): add Chinese support and update report content
- Update report.tex with Chinese title and content
- Remove inputenc package from custom.cls
- Add Chinese font support in custom.cls
- Update report.pdf to reflect changes

--- a/2025/01/report.tex
+++ b/2025/01/report.tex
@@ -2,8 +2,8 @@
 \begin{document}
 \maketitle
 
-\section{including}
-sss
+\section{黑体标题 测试}
+sss 中文 这是一个我们测试的结果
 % Rest of your document content...
 
 \end{document}
